--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # DeFi Savings Protocol - Frontend Environment Variables
 # Sepolia Testnet Configuration
 
-# Contract Addresses (NFT-Based Architecture - Deployed January 29, 2026)
-VITE_USDC_ADDRESS=0x5f89720026332AC218F3f832dE3b7488222aDE9C
-VITE_SAVINGS_BANK_ADDRESS=0xbf18558adf6BA008eA2c6924D50e980C998313f0
-VITE_TOKEN_VAULT_ADDRESS=0xEF08c572e314e0BAbf781C82B5775EAD68c789d4
-VITE_INTEREST_VAULT_ADDRESS=0xAaa46e0dE3CA6031dDD391da653FCedF5cb32a84
-VITE_DEPOSIT_NFT_ADDRESS=0xdD4572634915c7aa789CCD03af9d6dB0Fd61E690
+# Contract Addresses (Sepolia - deployments/sepolia, January 2026)
+VITE_MOCK_USDC_ADDRESS=0xF38A9Ed7840aB6eef41DF9d88b19fFf7443AA656
+VITE_SAVINGS_BANK_ADDRESS=0x3B6e54bb5B36a89838435EC504cE78B3B7Fd29DC
+VITE_TOKEN_VAULT_ADDRESS=0x3F371D9b7AF25DF7fcE3DEE044a11825ACDeFD64
+VITE_INTEREST_VAULT_ADDRESS=0x5a17868C3d6E1d3f19Ea56c483eA10aE5050051F
+VITE_DEPOSIT_NFT_ADDRESS=0x5f7Ac1Dc1180D652aa06B3eA7017B9E76bc46765
 
 # Network Configuration
 VITE_CHAIN_ID=11155111
